# initial-value-problem

./: .gitignore  CMakeLists.txt  README.md  compile.sh  direction-field.cpp  main-rungekutta.c  parameters.h  run.sh  rungekutta.c  vector-field.cpp
CauchyProblem/: CMakeLists.txt  CauchyProblem.c  CauchyProblem.h
RungeKutta/: CMakeLists.txt  RungeKutta.c  RungeKutta.h
examples/example1/: CauchyProblem.c  CauchyProblem.h  parameters.h
examples/example2/: CauchyProblem.c  CauchyProblem.h  parameters.h
examples/example3/: CauchyProblem.c  CauchyProblem.h  parameters.h
examples/example4/: CauchyProblem.c  CauchyProblem.h  parameters.h
examples/example5/: CauchyProblem.c  CauchyProblem.h  parameters.h
